<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:background="#fff"

    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="100dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_username"
        android:windowSoftInputMode="adjustPan"
        android:lineSpacingExtra="4sp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingRight="24dp"
        android:paddingEnd="24dp"
        android:fontFamily="@font/helvetica_neue_med"
        android:textColorHint="#A8B4C4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_password"
        android:windowSoftInputMode="adjustPan"
        android:lineSpacingExtra="4sp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingRight="24dp"
        android:paddingEnd="24dp"
        android:fontFamily="@font/helvetica_neue_med"
        android:textColorHint="#A8B4C4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:windowSoftInputMode="adjustPan"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:fontFamily="@font/helvetica_neue_lt"
        app:fontFamily="@font/helvetica_neue_lt"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>